--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
       content="association Funds Website"
     />
     <link rel="apple-touch-icon" href="favicon.ico" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" id="update-manifest" href="./manifest.json" />
   </head>
   <body>
     <div id="root"></div>
