--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     <link rel="manifest" id="update-manifest" href="./manifest.json" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="d-flex flex-column"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="./index.js"></script>
     <script
