--- a/client/public/aboutUs.html
+++ b/client/public/aboutUs.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
+
 <body>
-    About Us
+    <div class="w-fit text-body-tertiary">
+        <div class="m-3 mb-0 d-flex align-items-center justify-content-between">
+            <p class="fw-semibold fs-3 m-0">Back</p>
+            <h6 class="fw-semibold fs-3 m-0  position-absolute" style="left: 46%;">About Us</h6>
+        </div>
+    </div>
+
+    <div class="text-center">
+        <div class="d-inline-flex flex-column gap-5 text-center justify-content-center px-5"
+            style="padding-top: 50px; padding-bottom: 100px; border: solid 1px black;">
+            <div>
+                <h2>Founded & Designed by</h2>
+                <h5 class="m-0">Hussain Gadisaaz</h5>
+                <h5>(+919887179382)</h5>
+            </div>
+            <div>
+                <h2>Developed by</h2>
+                <h5 class="m-0">Hussain Amet</h5>
+                <h5>(+918739975253)</h5>
+            </div>
+            <div>
+                <h2>Maintenance by</h2>
+                <h5 class="m-0">Hussain Amet</h5>
+                <h5>(+918739975253)</h5>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
