--- a/client/public/aboutUs.html
+++ b/client/public/aboutUs.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
-    <div class="w-fit text-body-tertiary">
-        <div class="m-3 mb-0 d-flex align-items-center justify-content-between">
-            <p class="fw-semibold fs-3 m-0">Back</p>
-            <h6 class="fw-semibold fs-3 m-0  position-absolute" style="left: 46%;">About Us</h6>
+    <div class="w-fit">
+        <div class="m-3 mb-0 d-flex align-items-center justify-content-center text-body-tertiary">
+            <a href="/login" class="text-body-tertiary position-absolute" style="left: 2%;">
+                <p class="fw-semibold fs-3 m-0">Back</p>
+            </a>
+            <h6 class="fw-semibold fs-3 m-0 mb-4">About Us</h6>
         </div>
     </div>
 
     <div class="text-center">
-        <div class="d-inline-flex flex-column gap-5 text-center justify-content-center px-5"
-            style="padding-top: 50px; padding-bottom: 100px; border: solid 1px black;">
+        <div class="d-inline-flex flex-column gap-5 text-center justify-content-center px-4"
+            style="padding-top: 40px; padding-bottom: 100px; border: solid 1px black;">
             <div>
                 <h2>Founded & Designed by</h2>
                 <h5 class="m-0">Hussain Gadisaaz</h5>
