--- a/client/public/aboutUs.html
+++ b/client/public/aboutUs.html
@@ -12,10 +12,10 @@
 <body>
     <div class="w-fit">
         <div class="m-3 mb-0 d-flex align-items-center justify-content-center text-body-tertiary">
-            <a href="/login" class="text-body-tertiary position-absolute" style="left: 2%;">
+            <a href="/login" class="text-body-tertiary position-absolute" style="left: 2%; top: 2%;">
                 <p class="fw-semibold fs-3 m-0">Back</p>
             </a>
-            <h6 class="fw-semibold fs-3 m-0 mb-4">About Us</h6>
+            <h6 class="fw-semibold fs-3 m-0 mb-4 mt-1">About Us</h6>
         </div>
     </div>
 
