--- a/client/public/aboutUs.html
+++ b/client/public/aboutUs.html
@@ -24,17 +24,17 @@
             style="padding-top: 40px; padding-bottom: 100px; border: solid 1px black;">
             <div>
                 <h2>Founded & Designed by</h2>
-                <h5 class="m-0">Hussain Gadisaaz</h5>
+                <h5 class="m-0 pb-1">Hussain Gadisaaz</h5>
                 <h5><a href="tel:+919887179382">(+91 9887179382)</a></h5>
             </div>
             <div>
                 <h2>Developed by</h2>
-                <h5 class="m-0">Hussain Amet</h5>
+                <h5 class="m-0 pb-1">Hussain Amet</h5>
                 <h5><a href="tel:+918739975253">(+91 8739975253)</a></h5>
             </div>
             <div>
                 <h2>Maintenance by</h2>
-                <h5 class="m-0">Hussain Amet</h5>
+                <h5 class="m-0 pb-1">Hussain Amet</h5>
                 <h5><a href="tel:+918739975253">(+91 8739975253)</a></h5>
             </div>
         </div>
