--- a/client/public/getInTouch.html
+++ b/client/public/getInTouch.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get In Touch</title>
+    <title>Get in Touch</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
+
 <body>
-    Get In Touch
+    <div class="w-fit">
+        <div class="m-3 mb-0 d-flex align-items-center justify-content-center text-body-tertiary">
+            <a href="/login" class="text-body-tertiary position-absolute" style="left: 2%; top: 2%;">
+                <p class="fw-semibold fs-3 m-0">Back</p>
+            </a>
+            <h6 class="fw-semibold fs-3 m-0 mb-4 mt-1">Get in Touch</h6>
+        </div>
+    </div>
+
+    <div class="text-center">
+        <div class="d-inline-flex flex-column gap-5 text-center justify-content-center px-5"
+            style="padding-top: 40px; padding-bottom: 100px; border: solid 1px black;">
+            <div>
+                <h2>Email</h2>
+                <h5><a href="mailto:hussainamet@gmail.com">hussainamet@gmail.com</a></h5>
+            </div>
+            <div>
+                <h2>WhatsApp</h2>
+                <h5><a href="https://wa.me/8739975253" target="_blank">Chat with Me</a></h5>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
