--- a/client/public/getInTouch.html
+++ b/client/public/getInTouch.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <h2>WhatsApp</h2>
-                <h5><a href="https://wa.me/8739975253" target="_blank">Chat with Me</a></h5>
+                <h5><a href="https://wa.me/+918739975253" target="_blank">Chat with Me</a></h5>
             </div>
         </div>
     </div>
