--- a/client/public/aboutUs.html
+++ b/client/public/aboutUs.html
@@ -7,12 +7,13 @@
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="w-fit">
         <div class="m-3 mb-0 d-flex align-items-center justify-content-center text-body-tertiary">
-            <a href="/login" class="text-body-tertiary position-absolute" style="left: 2%; top: 2%;">
+            <a href="/login" class="text-body-tertiary position-absolute back-top" style="left: 2%; top: 2%;">
                 <p class="fw-semibold fs-3 m-0">Back</p>
             </a>
             <h6 class="fw-semibold fs-3 m-0 mb-4 mt-1">About Us</h6>
@@ -37,6 +38,14 @@
                 <h5 class="m-0 pb-1">Hussain Amet</h5>
                 <h5><a href="tel:+918739975253">(+91 8739975253)</a></h5>
             </div>
+        </div>
+    </div>
+
+    <div class="w-fit back-bottom">
+        <div class="m-3 mb-0 d-flex justify-content-center text-body-tertiary">
+            <a href="/login" class="text-body-tertiary">
+                <p class="fw-semibold fs-3 m-0">Back</p>
+            </a>
         </div>
     </div>
 
