--- a/client/public/getInTouch.html
+++ b/client/public/getInTouch.html
@@ -7,12 +7,13 @@
     <title>Get in Touch</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div class="w-fit">
         <div class="m-3 mb-0 d-flex align-items-center justify-content-center text-body-tertiary">
-            <a href="/login" class="text-body-tertiary position-absolute" style="left: 2%; top: 2%;">
+            <a href="/login" class="text-body-tertiary position-absolute back-top" style="left: 2%; top: 2%;">
                 <p class="fw-semibold fs-3 m-0">Back</p>
             </a>
             <h6 class="fw-semibold fs-3 m-0 mb-4 mt-1">Get in Touch</h6>
@@ -33,6 +34,13 @@
         </div>
     </div>
 
+    <div class="w-fit back-bottom">
+        <div class="m-3 mb-0 d-flex justify-content-center text-body-tertiary">
+            <a href="/login" class="text-body-tertiary">
+                <p class="fw-semibold fs-3 m-0">Back</p>
+            </a>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
